--- a/.github/workflows/IPTV采集检测.yml
+++ b/.github/workflows/IPTV采集检测.yml
@@ -2,7 +2,7 @@ name: IP采集检测
 
 on:
   schedule:
-    - cron: '0 11,23 * * *'        #这里更改自动运行的时间，没这两行的话只能手动运行
+    - cron: '0 06,20 * * *'        #这里更改自动运行的时间，没这两行的话只能手动运行
   workflow_dispatch:
     分支:
       - main
@@ -31,7 +31,7 @@ jobs:
           python ${{ github.workspace }}/py/酒店源.py      
       - name: 提交更改
         run: |
-          git config --local user.email "actions@163.com"
+          git config --local user.email "luoyexp@163.com"
           git config --local user.name "GitHub Action"
           #git reset --hard origin/main
           git add .
