--- a/.github/workflows/采集.yml
+++ b/.github/workflows/采集.yml
@@ -1,8 +1,8 @@
 name: 采集
 
 on:
-  #schedule:
-    #- cron: '10 */24 * * *'        #这里更改自动运行的时间，没这两行的话只能手动运行
+  schedule:
+    - cron: '10 0 */2 * 2'        #这里更改自动运行的时间，没这两行的话只能手动运行‌每隔2天触发一次‌：在每月1号、3号、5号…的‌0点10分‌执行。‌每周二触发一次‌：无论日期是否为“每隔2天”，只要当天是周二，也会在‌0点10分‌执行
   workflow_dispatch:
     分支:
       - main
