--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: 组播采集合并
 
 on:
   schedule:
-    - cron: '40 */24 * * *'   # 这里更改自动运行的时间#_udp
+    - cron: '40 0 */2 * 2'   # 这里更改自动运行的时间#_udp
   workflow_dispatch:
     branches:
       - main
